<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layout_main_bottom_holder_background">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="@dimen/photo_home_screen_width"
            android:layout_height="@dimen/photo_home_screen_height"
            android:scaleType="fitXY"
            android:src="@drawable/ic_photo"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/photo_home_screen_margin_top"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/linear_layout_home_height"
            android:background="@drawable/background_item_menu_home_activity"
            android:layout_marginLeft="@dimen/linear_layout_padding_lager"
            android:layout_marginRight="@dimen/linear_layout_padding_lager"
            android:layout_marginTop="@dimen/linear_layout_first_home_margin_top"
            android:clickable="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:id="@+id/linear_list_photo">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_lager_home"
                android:textColor="@color/white"
                android:text="@string/view_list_photo"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/linear_layout_home_height"
            android:background="@drawable/background_item_menu_home_activity"
            android:layout_marginLeft="@dimen/linear_layout_padding_lager"
            android:layout_marginRight="@dimen/linear_layout_padding_lager"
            android:layout_marginTop="@dimen/linear_layout_home_margin_top"
            android:clickable="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:id="@+id/linear_edit_photo">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_lager_home"
                android:textColor="@color/white"
                android:text="@string/edit_photo"
                android:textStyle="bold"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/linear_layout_home_height"
            android:background="@drawable/background_item_menu_home_activity"
            android:layout_marginLeft="@dimen/linear_layout_padding_lager"
            android:layout_marginRight="@dimen/linear_layout_padding_lager"
            android:layout_marginTop="@dimen/linear_layout_home_margin_top"
            android:clickable="true"
            android:orientation="horizontal"
            android:gravity="center"
            android:id="@+id/linear_combine_photo">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_lager_home"
                android:textColor="@color/white"
                android:text="@string/combine_photo"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/linear_layout_home_height"
            android:background="@drawable/background_item_menu_home_activity"
            android:layout_marginLeft="@dimen/linear_layout_padding_lager"
            android:layout_marginRight="@dimen/linear_layout_padding_lager"
            android:layout_marginTop="@dimen/linear_layout_home_margin_top"
            android:clickable="true"
            android:orientation="horizontal"
            android:gravity="center"
            android:id="@+id/linear_make_video">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_lager_home"
                android:textColor="@color/white"
                android:text="@string/make_video"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/linear_layout_padding_lager"
            android:layout_marginRight="@dimen/linear_layout_padding_lager"
            android:layout_marginTop="@dimen/linear_layout_home_margin_top"
            android:clickable="true"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/design_by"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_small_home" />
            <TextView
                android:layout_marginLeft="@dimen/text_view_home_margin_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/framgia"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_size_lager_home" />
        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
